# lab-unix-sistemas-operativos

./: CMakeLists.txt  README.md  informe.md
cat0/: main.c
cp0/: main.c
cp1/: main.c
ln0/: main.c
ln1/: main.c
ls0/: main.c
mv0/: main.c
ps0/: main.c
rm0/: main.c
stat0/: main.c
tee0/: main.c
touch0/: main.c
